# CHI-2025-Papers-explorer

./: .gitignore  data.json  index.html  justfile  pyproject.toml  requirements.txt
assets/: index-B9b_HWbl.js  index-Bc3Pm6W_.css  index-C89zvA3A.css  index-D-Z89EXI.css  index-DCmOUd1Z.css  index-DLqYaQXZ.css  index-DxEpEfGO.css  index-d9PCeRft.css
backend/: scrape_range.py
backend/api/: main.py
backend/api/dim_reduction/: base.py  pca_reducer.py  tsne_reducer.py  umap_reducer.py
backend/api/search/: embedding_search.py  search_config.py  tfidf_search.py
backend/core/: scraper.py
data/: pca_coordinates.json  scraped_data_0314.json  tsne_coordinates.json  umap_coordinates.json
frontend/: .env  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/scripts/: prepare-config.js
frontend/src/: App.tsx  main.tsx  react-plotly-js.d.ts
frontend/src/components/: CardGrid.tsx  DataRangePicker.tsx  Footer.tsx  OptionsPanel.tsx  PageContainer.tsx  PaperCard.tsx  PaperDetailPanel.tsx  PaperSummaryCard.tsx  ScatterPlot.tsx  SearchBar.tsx  SearchOptionsSidebar.tsx
frontend/src/components/ui/: date-range-picker.tsx
frontend/src/hooks/: usePageViews.tsx
frontend/src/pages/: Home.tsx  SearchPage.tsx  SummaryPage.tsx  VisualizationPage.tsx
frontend/src/theme/: components.ts
frontend/src/types/: SummaryPaper.ts
frontend/src/utils/: apiClient.ts  filterByContent.ts  filterByDate.ts  fuzzySearch.ts
scripts/: preprocess_embeddings.py  preprocess_pca.py  preprocess_tsne.py  preprocess_umap.py  preprocess_utils.py
