[project]
name = "chi-paper-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
