[project]
name = "chi-paper-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.29.0",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "uvicorn>=0.34.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
